--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,7 @@
   },
   "permissions": [
     "activeTab",
-    "scripting",
-    "tabs"
+    "scripting"
   ],
   "background": {
     "service_worker": "background.js"
